<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refreshNextDNS"
        android:title="@string/refresh_title"
        android:icon="@drawable/refresh"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/back"
        android:title="@string/back_title"
        android:icon="@drawable/back"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/returnHome"
        android:title="@string/home_title"
        android:icon="@drawable/home"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/pingNextDNS"
        android:title="@string/ping_title"
        app:showAsAction="never"
        android:fontFamily="sans-serif-thin">
    </item>
    <item
        android:id="@+id/testNextDNS"
        android:title="@string/test_title"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never">
    </item>
</menu>