<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatusActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:paddingHorizontal="10dp"
            android:contentDescription="@string/generic_content_description"
            app:srcCompat="@drawable/nextdns_logo"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/redDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintTop_toBottomOf="@+id/orangeDemoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/failure_red" />

    <ImageView
        android:id="@+id/greenDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/success_green" />

    <TextView
        android:id="@+id/greenDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_green"
        android:textSize="12sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/greenDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/yellowDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_yellow"
        android:textSize="12sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/yellowDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/yellowDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintTop_toBottomOf="@+id/greenDemoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/success_yellow"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/orangeDemoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_orange"
        android:textSize="12sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/orangeDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/orangeDemo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/generic_content_description"
        app:layout_constraintTop_toBottomOf="@+id/yellowDemoTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/failure_orange"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/help_red"
        android:textSize="12sp"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/redDemo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>